# tide

./: .gitignore  CHANGELOG.md  Makefile  PLUGIN.md  README-EN.md  README.md  final_report.md  pyproject.toml  recommendation.md
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.tide/: state.json
agents/: case-reviewer.md  case-writer.md  har-parser.md  industry-researcher.md  openai.yaml  project-asset-scanner.md  project-scanner.md  repo-syncer.md  scenario-analyzer.md
assets/: assertion-layers.drawio  workflow.drawio
commands/: tide.md  using-tide.md
hooks/: hooks.json
iter_2/: score.md
iter_3/: score.md
iter_4/: score.md
iter_5/: score.md
iter_6/: final_score.md  score.md
prompts/: assertion-layers.md  code-style-python.md  har-parse-rules.md  industry-assertions.md  review-checklist.md  scenario-enrich.md
references/: assertion-examples.md  extending-industry-assertions.md  generated-project-best-practices.md  tech-stack-options.md
scripts/: artifact_manifest.py  claude_hooks.py  common.py  convention_scanner.py  deterministic_case_writer.py  format_checker.py  generated_assertion_gate.py  har_inputs.py  har_parser.py  hooks.py  live_gate.py  notifier.py  preferences.py  repo_profiles.py  repo_sync.py  run_context.py  scaffold.py  scenario_normalizer.py  scenario_validator.py  state_manager.py  sync-dev.sh  test_runner.py  write_scope_guard.py
templates/: tide-config.yaml.j2
tests/: test_agent_contracts.py  test_artifact_manifest.py  test_codex_plugin_contract.py  test_convention_scanner.py  test_har_inputs.py  (+21 more)
(+197 files in other folders)
